fixes swagger
