# swagger.json
@@ -364,6 +364,39 @@
             }
         },
 
+        "/api/admin/sport/fetch-classes/{sportId}": {
+            "get": {
+                "description": "",
+                "tags": ["Sport class"],
+                "parameters": [
+                    {
+                        "name": "sportId",
+                        "in": "path",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/api/create-class": {
             "post": {
                 "description": "",
